# vpn-admin-3

./: .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_11_24_1346-5d00cc50d00a_create_tables.py  2025_11_24_1523-751d235017f7_create_tables.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  init.py  logger.py
app/domains/billing/: repository.py
app/domains/users/: models.py  repository.py
app/infrastructure/: __init__.py
app/interfaces/: __init__.py
app/interfaces/telegram/: __init__.py  bot.py  keyboards.py
configs/: db_config.yaml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_12_06_1433-19dd62cceb0c_create_tables.py  2025_12_07_1314-0153d1dcc890_init_db.py  2025_12_07_1417-a36344c4e0fc_increase_user_name_to_48_chars.py  2025_12_08_0922-f2c70315e75e_make_user_balance_nullable.py
src/core/: config.py  database.py  handlers.py  logger.py  orm.py
src/core/models/: __init__.py  awg.py  base.py  message.py  registration.py  transaction.py  user.py
src/core/repos/: awg.py  base.py  message.py  registration.py  transaction.py  user.py
src/core/schemas/: awg.py  message.py  messages.py  registration.py  transaction.py  user.py
src/core/tasks/: debeting.py  debiting.py  scheduler.py
src/models/: __init__.py  transaction.py  user.py
src/telegram/: bot.py  bot_init.py  message_handler.py  message_sender.py
src/telegram/handlers/: __init__.py  (+2 more)
src/transaction/: dto.py  handlers.py  orm.py  repo.py
src/user/: dto.py  handlers.py  orm.py  repo.py
(+49 files in other folders)
